terraform/modules/networking/main.tf
resource "aws_vpc" "ctf_vpc" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = true
  tags                 = { Name = "ctf-vpc" }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.ctf_vpc.id
}

resource "aws_subnet" "public" {
  vpc_id                  = aws_vpc.ctf_vpc.id
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = true
}

resource "aws_security_group" "ctf_sg" {
  name   = "ctf-sg"
  vpc_id = aws_vpc.ctf_vpc.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = -1
    to_port     = -1
    protocol    = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

output "vpc_id" { value = aws_vpc.ctf_vpc.id }
output "public_subnet_id" { value = aws_subnet.public.id }
output "security_group_id" { value = aws_security_group.ctf_sg.id }
